<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>task_one</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1755371281@qq.com">chen</maintainer>
  <license>TODO: License declaration</license>

  <!-- 添加必要的依赖项 -->
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>velodyne_simulator</depend>

  <!-- 测试依赖项 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- 导出构建类型 -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
